k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host: "mysite.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port:
              number: 80
